[project]
name = "yyshelp"
version = "0.1.0"
description = "yyshelp"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_saa"]
plugin_dirs = ["nonebot-plugin-yyshelp"]
builtin_plugins = []
